# MontyHallSimulator

./: CMakeLists.txt  README  main.cpp
include/: mhdoor.h  mhmodel.h  mhplayer.h  mhresult.h  mhstats.h  proxyrandom.h
src/: mhdoor.cpp  mhmodel.cpp  mhplayer.cpp  mhresult.cpp  mhstats.cpp  proxyrandom.cpp
